force-app/src/objects/ffps_custRem__Reminder_Language__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Bank_Details__c</fullName>
        <defaultValue>&quot;Bank Details&quot;</defaultValue>
        <label>Bank Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Column_Headings__c</fullName>
        <defaultValue>&quot;Document,Reference,Date,Due Date,Days Late,Currency,Amount Due,Reminder&lt;br/&gt;Level&quot;</defaultValue>
        <label>Column Headings</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Email_Body_Text__c</fullName>
        <label>Email Body Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Email_Subject_Text__c</fullName>
        <defaultValue>&quot;Reminder&quot;</defaultValue>
        <label>Email Subject Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Footer_Text__c</fullName>
        <label>Footer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Header_Text__c</fullName>
        <label>Header Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Language__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <label>Language</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Overdue_Balance_Label__c</fullName>
        <defaultValue>&quot;Overdue Balance&quot;</defaultValue>
        <label>Overdue Balance Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Total_Balance_Label__c</fullName>
        <defaultValue>&quot;Total Balance&quot;</defaultValue>
        <label>Total Balance Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reminder Language</label>
    <listViews>
        <fullName>ffps_custRem__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_custRem__Language__c</columns>
        <columns>ffps_custRem__Severity__c</columns>
        <columns>ffps_custRem__Title__c</columns>
        <columns>ffps_custRem__Header_Text__c</columns>
        <columns>ffps_custRem__Column_Headings__c</columns>
        <columns>ffps_custRem__Footer_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reminder Language Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminder Languages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>